added test cases, code refactoring

--- a/src/BUILD
+++ b/src/BUILD
@@ -1,6 +1,6 @@
-cc_binary(
-    name = "hello_lib",
-    srcs = ["main.cpp", "square.h", "square.cpp"],
-    copts = ["-Iinclude", "-Wall", "-Werror"],
+cc_library(
+    name = "square_intersection",
+    srcs = ["square.h", "square.cpp"],
+    copts = ["-Iinclude", "-Wall"],
     visibility = ["//visibility:public"],
 )
